[tool.poetry]
name = "matches"
version = "0.1.0"
description = "Pytorch training toolkit for power users"
authors = ["Vsevolod Poletaev <poletaev.va@gmail.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
